yoshimi 2.3.2 M

2024-6-21 Will
bn 2337
Removed some redundant UI 'damage()' calls.
All spinbox arrows now show correct colour.
    Arrows also rescale nicely.
Corrected UI/WidgetSpinner copyright info.

2024-6-20 Will
bn 2336
Theme changes now auto-detected.

2024-6-19 Will
bn 2335
BugFix: Scales->Center *doesn't* need microtonal to be enabled.
Temporarily disabled delay in PartUI->fxRtext()
Temporarily disabled delay in EffUI from line 2691.
Theme changes no longer close and reopen windows.

Revised some theme labels for improved clarity.

2024-6-16 Will
bn 2334
Config->Theme 'monchrome' button now takes immediate effect.
Updated HTML guide.

2024-6-9 Will
bn 2333
Merged in crossfade branch.
Updated CmakeLists.txt for min version 3.5
Moved project name down below primary cmake commands.

Further refined crossfade action.
Changed internal note velocity to float.
Added internal note volume.

Performed initial separation of crossfade multiplier from fade type.

2024-6-2 Will
bn 2332
BugFix: Not saving root and bank changes.
Updated Control Data.

2024-5-26 Will
bn 2331
Changed crossfade ID to uchar crossfadeType ready for alternative types,
reading and retaining old saved xml bool type for backward compatibility.

Added superFat instument to 'companion' and updated user guide.


2024-5-24 Will
bn 2330
Updated some dev-notes.
Clarified microtonal error reporting.
Commented out test messages in updateConfig.

2024-5-6 Will
bn 2329
BugFix: Not updating 'banks_checked' in config file.

2024-5-3 Will
bn 2328
Updated config images in user guide.
Re-ordered early guide entries.
Added a proper 'Monochrome' button to themes.
Adjusted EQ window sizes to match others.

2024-4-24 Will
bn 2327
Applied instrument change GUI bugfix patch from Hermann.
Removed some now redundant config change notification code.

2024-4-21 Will
bn 2326
Removed all reference to singleRowPanel.
All currently defined config setting now immediate.
Updated GUI.
Disabled automatic config save on exit.