@@ -1,8 +1,9 @@
 
 BUG! stand-alone GUI freezes and no further system changes if new instance started while instrument change in progress.
 
-BUG! Vector window instrument label colours not updated when engines are manually changed.
-    OK when loading instruments etc.
+BUG! Vector window instrument label colours not updated when engines are manually changed - it's OK when loading instruments etc.
+
+BUG! Loading a state file with an embedded MIDI-Learn window sometimes doesn't display the text of the first learned line.
 
 Minor bug Multi instances produce jack error reports when main instance closed, even if they have been closed first - been there since V 1.4.1 :(
 
