@@ -159,7 +159,7 @@ This would corrupt the colour map.
     <br><br>
     Further details can be found in the  <a href="https://github.com/Yoshimi/yoshimi-doc/raw/master/pdf/yoshimi-advanced-reference-manual.pdf">Advanced Reference Manual</a>
     <br><br>
-    With the 'Import' button you can also fetch themes that have been downloaded from elsewhere. These will become available next time the window is refreshed. Alternatively with the 'Export' button you can make a copy of the current theme to a more accessible location.<br>Using these two options together, along with a text editor enables you to make changes to an existing theme very quickly.<br>Keep in mind the 'classic' theme is a reference file, and is not what is actually used for that theme.
+    With the 'Import' button you can also fetch themes that have been downloaded from elsewhere. These will be immediately loaded and displayed in the theme list. Alternatively with the 'Export' button you can make a copy of the current theme to a more accessible location.<br>Using these two options together, along with a text editor enables you to make changes to an existing theme very quickly.<br>Keep in mind the 'classic' theme is a reference file, and is not what is actually used for that theme.
     </p>
     <img src="../images/boundry.png" alt="divider" class="wideline">
     <a href="#top" class="up">Back to top</a>
