@@ -56,7 +56,7 @@
      <br>
      <b>Action</b> buttons are rounded and pale blue. These are the ones that make immediate changes such as enabling a synth engine.
      <br><br>
-     There is a third type that is used for <b>Close</b> and <b>Cancel</b> operations. These are sharply rectangular and grey. They don't normally make changes. An exception being "Save and Close" in the <em>Settings</em> window.
+     There is a third type that is used for <b>Close</b> and <b>Cancel</b> operations. These are sharply rectangular and grey. They don't normally make changes.
     </p>
     <p>
     In many places you will see a pair of small dark blue buttons marked '<b>C</b>' and '<b>P</b>'. These enable you to copy the entire contents of just that section and later paste it to either a <a href="../preset/preset.html">Presets</a> file or to another identical section. For example you can copy AddSynth Global in part 1 and then paste it to any other AddSynth Global engine, such as part 4 kit item number 7 AddSynth.
