@@ -2542,8 +2542,7 @@ class PartUI {: {public Fl_Group, PartUI_}
                 {
                     if(inseffectui->filterwindow->visible())
                     {
-                        inseffectui->filterwindow->hide();
-                        inseffectui->filterwindow->show();
+                        inseffectui->filterwindow->redraw();
                     }
                     if(inseffectui->fwin_filterui)
                         inseffectui->fwin_filterui->theme();
