@@ -210,7 +210,6 @@ class SUBnoteUI {: {public PresetsUI_}
         xywh {10 6 205 60} box PLASTIC_UP_BOX color 223
       }
       Fl_Group ampgrp {
-        label AMPLITUDE
         xywh {5 5 215 135} box THIN_UP_FRAME labelfont 1 labelsize 11 labelcolor 64 align 17
       } {
         Fl_Dial vol {
@@ -219,7 +218,7 @@ class SUBnoteUI {: {public PresetsUI_}
           o->selection_color(setKnob(o->value(),96));
 
           send_data (0, SUBSYNTH::control::volume, o->value(), TOPLEVEL::type::Integer);}
-          tooltip Volume xywh {20 20 29 29} box ROUND_UP_BOX labelsize 10 labelcolor 64 align 10 maximum 127 step 1
+          tooltip Volume xywh {22 22 29 29} box ROUND_UP_BOX labelsize 10 labelcolor 64 align 10 maximum 127 step 1
           code0 {o->setValueType(VC_InstrumentVolume);}
           class WidgetPDial
         }
@@ -228,7 +227,7 @@ class SUBnoteUI {: {public PresetsUI_}
           callback {//
           o->selection_color(setKnob(o->value(),90));
           send_data (0, SUBSYNTH::control::velocitySense, o->value(), TOPLEVEL::type::Integer);}
-          tooltip {Velocity sensing} xywh {66 20 29 29} box ROUND_UP_BOX labelsize 10 labelcolor 64 maximum 127 step 1
+          tooltip {Velocity sensing} xywh {66 22 29 29} box ROUND_UP_BOX labelsize 10 labelcolor 64 maximum 127 step 1
           code0 {o->setValueType(VC_AmpVelocitySense);}
           class WidgetPDial
         }
@@ -237,7 +236,7 @@ class SUBnoteUI {: {public PresetsUI_}
           callback {//
           o->selection_color(setKnob(o->value(),64));
           send_data (0, SUBSYNTH::control::panning, o->value(), TOPLEVEL::type::Integer);}
-          tooltip Panning xywh {118 20 29 29} box ROUND_UP_BOX labelsize 10 labelcolor 64 maximum 127 step 1
+          tooltip Panning xywh {118 22 29 29} box ROUND_UP_BOX labelsize 10 labelcolor 64 maximum 127 step 1
           code0 {o->setValueType(VC_PanningStd);}
           class WidgetPDial
         }
@@ -252,7 +251,7 @@ class SUBnoteUI {: {public PresetsUI_}
           callback {//
           o->selection_color(setKnob(o->value(),63));
           send_data (0, SUBSYNTH::control::randomWidth, o->value(), TOPLEVEL::type::Integer);}
-          tooltip {Random Width} xywh {178 20 29 29} box ROUND_UP_BOX labelsize 10 labelcolor 64 maximum 63 step 1 value 63
+          tooltip {Random Width} xywh {178 22 29 29} box ROUND_UP_BOX labelsize 10 labelcolor 64 maximum 63 step 1 value 63
           code0 {o->setValueType(VC_PanningRandom);}
           class WidgetPDial
         }
@@ -269,7 +268,11 @@ class SUBnoteUI {: {public PresetsUI_}
           class Fl_Check_Button2
         }
         Fl_Box {} {
-          xywh {108 22 4 37} box THIN_DOWN_FRAME
+          xywh {108 22 4 38} box THIN_DOWN_FRAME
+        }
+        Fl_Box ampLabel {
+          label AMPLITUDE
+          xywh {100 10 20 10} labelfont 1 labelsize 11 labelcolor 64
         }
       }
       Fl_Group freqsettingsui {
@@ -721,7 +724,7 @@ class SUBnoteUI {: {public PresetsUI_}
         h[i]->h_dash->size(int(10 * dScale), int(3 * dScale));
     }
 
-    ampgrp->labelsize(size11);
+    ampLabel->labelsize(size11);
     vol->labelsize(size);
     vsns->labelsize(size);
     pan->labelsize(size);
