@@ -1,5 +1,11 @@
 yoshimi 2.3.2 M
 
+2024-6-27 Will
+bn 2338
+Some minor GUI cleanups.
+Clarifed some comments in FileMgrFuncs.h
+Doc updates.
+
 2024-6-21 Will
 bn 2337
 Removed some redundant UI 'damage()' calls.
